fix: ms 부분 오류 수정

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset='utf-8'>
   <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-  <title>Page Title</title>
+  <title>바닐라 js 스탑워치</title>
   <meta name='viewport' content='width=device-width, initial-scale=1'>
   <script src='./js/main.js' type='module'></script>
 </head>
 <body>
-  안녕!
+  스탑워치
   <div class="main"></div>
 </body>
 </html>
